Added Display class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ProgettoListaSpesa)
 set(CMAKE_CXX_STANDARD 20)
 add_subdirectory(test)
 
-set(SOURCE_FILES Articolo.h Subject.h Observer.h ShoppingList.h User.h ShoppingList.cpp User.cpp)
+set(SOURCE_FILES Articolo.h Subject.h Observer.h Display.h ShoppingList.h User.h ShoppingList.cpp User.cpp)
 add_executable(ProgettoListaSpesa main.cpp)
 add_library(core ${SOURCE_FILES})
 set_target_properties(core PROPERTIES LINKER_LANGUAGE CXX)
